src/test/ui/rfc-2497-if-let-chains/issue-83274.rs
// check-fail

pub fn main() {
    let x = Some(3);
    if (let Some(y) = x) { //~ ERROR invalid parentheses around `let` expression in `if let`
    }
}
